finished the home

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,11 @@
+// Vendors
+// @import "../../node_modules/@splidejs/splide/src/css/template/default/index";
+
 // Variables
-@use "./modules/variables.scss";
+@import "./modules/variables.scss";
+
+// Mixins
+@import "./modules/mixins.scss";
 
 // Fonts
 @import "./modules/fonts";
@@ -7,360 +13,16 @@
 // Bootstrap
 @import "./modules/bootstrap.scss";
 
-// Libraries
-// @import "../../node_modules/@splidejs/splide/src/css/template/default/index";
+// Base
+@import "./modules/base.scss";
+
+// Buttons
+@import "./modules/buttons.scss";
 
 // Modules
 @import "./modules/header.scss";
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: variables.$font-primary;
-}
-
-p {
-  font-family: variables.$font-secondary;
-  // letter-spacing: 1px;
-}
-
-.alertas-btn-primary {
-  background-color: variables.$gray;
-  padding: 0.8rem 2rem;
-  text-transform: capitalize;
-  color: variables.$white;
-  border: none;
-  border-radius: 0.5rem;
-  margin-top: 1rem;
-  font-size: 14px;
-}
-
-.alertas-btn-secondary {
-  background-color: variables.$blue;
-  padding: 0.8rem 2rem;
-  text-transform: capitalize;
-  color: variables.$white;
-  border: none;
-  border-radius: 0.5rem;
-  margin-top: 1rem;
-  font-size: 14px;
-}
-
-.hero {
-  position: relative;
-  width: 100vw;
-
-  img {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-  }
-
-  .title-cta-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  h1 {
-    font-weight: 300;
-    color: variables.$gray;
-
-    @include media-breakpoint-up(lg) {
-      font-size: 3rem;
-    }
-  }
-}
-
-.calidad-seguridad-compromiso {
-  padding: 4rem 0;
-
-  h2,
-  p {
-    color: variables.$gray;
-  }
-
-  h2 {
-    font-size: 2rem;
-    font-weight: 400;
-
-    @include media-breakpoint-up(lg) {
-      font-size: 3rem;
-    }
-
-    &::after {
-      content: "";
-      display: block;
-      height: 2px;
-      width: 25%;
-      margin: 1rem 0;
-      background-color: variables.$blue;
-    }
-  }
-
-  p {
-    font-weight: 300;
-  }
-
-  .row {
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  .content-right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 100%;
-
-    margin-bottom: 4rem;
-
-    @include media-breakpoint-up(md) {
-      padding-right: 35%;
-
-      margin-bottom: 0;
-    }
-  }
-
-  .image-wrapper {
-    width: 100%;
-
-    img {
-      display: block;
-      width: 80%;
-      margin: 0 auto;
-    }
-  }
-}
-
-.porque-elegirnos {
-  background-image: url("/images/background-blue.png");
-  background-repeat: repeat;
-  background-position: center;
-  background-size: cover;
-
-  color: variables.$white;
-
-  padding: 4rem 0;
-
-  h2 {
-    text-align: center;
-    margin-bottom: 4rem;
-  }
-
-  .alertas-card {
-    position: relative;
-
-    width: 300px;
-
-    border: 2px variables.$white solid;
-    border-radius: 1rem;
-
-    margin-bottom: 3rem;
-
-    margin-right: auto;
-    margin-left: auto;
-
-    padding: 3rem;
-
-    text-align: center;
-
-    .icon-wrapper {
-      position: absolute;
-      display: block;
-      width: 3rem;
-      padding: 0.5rem;
-
-      top: -24px;
-      left: 50%;
-
-      transform: translateX(-50%);
-
-      border-radius: 10rem;
-      background-color: variables.$white;
-    }
-
-    p {
-      margin: 0;
-    }
-  }
-}
-
-.estamos-para-ayudarte {
-  padding: 4rem 0;
-
-  h2,
-  p {
-    color: variables.$gray;
-  }
-
-  h2 {
-    font-size: 2rem;
-    font-weight: 400;
-
-    @include media-breakpoint-up(lg) {
-      font-size: 3rem;
-    }
-
-    &::after {
-      content: "";
-      display: block;
-      height: 2px;
-      width: 25%;
-      margin: 1rem 0 1rem auto;
-      background-color: variables.$blue;
-    }
-  }
-
-  p {
-    font-weight: 300;
-  }
-
-  .row {
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  .content-left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    text-align: right;
-
-    height: 100%;
-
-    margin-bottom: 4rem;
-
-    @include media-breakpoint-up(md) {
-      padding-left: 35%;
-
-      margin-bottom: 0;
-    }
-  }
-
-  .image-wrapper {
-    width: 100%;
-
-    img {
-      display: block;
-      width: 100%;
-      margin: 0 auto;
-
-      @include media-breakpoint-up(md) {
-        width: 80%;
-      }
-    }
-  }
-}
-
-.trabajar-en-alertas {
-  background: url("/images/background-blue-dark.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  text-align: center;
-
-  padding: 4rem 0;
-
-  color: variables.$white;
-
-  img {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 2rem;
-  }
-
-  h3 {
-    margin-bottom: 1rem;
-  }
-}
-
-footer {
-  background-color: variables.$gray;
-  color: variables.$white;
-
-  padding: 4rem 0;
-
-  .icon-wrapper {
-    img {
-      display: block;
-      width: 5rem;
-
-      margin: 0 auto 1rem auto;
-
-      @include media-breakpoint-up(md) {
-        margin: 0;
-      }
-    }
-  }
-
-  a {
-    color: transparent;
-  }
-
-  .redes-sociales {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-
-    .redes-sociales-wrapper {
-      display: flex;
-      justify-items: center;
-      align-items: center;
-      gap: 1rem;
-
-      // margin: 0 auto;
-    }
-
-    img {
-      display: block;
-      width: 1rem;
-    }
-  }
-
-  p {
-    font-size: 14px;
-
-    text-align: center;
-
-    @include media-breakpoint-up(md) {
-      text-align: left;
-    }
-  }
-}
-// * {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-// }
-
-// body {
-//   color: variables.$blue;
-//   // background-color: black;
-// }
-
-// h1 {
-//   font-family: variables.$font-primary;
-// }
-
-// p {
-//   font-family: variables.$font-secondary;
-// }
+@import "./modules/hero.scss";
+@import "./modules/text-image.scss";
+@import "./modules/porque-elegirnos.scss";
+@import "./modules/trabajar-en-alertas.scss";
+@import "./modules/footer.scss";
