--- a/src/scss/modules/variables.scss
+++ b/src/scss/modules/variables.scss
@@ -1,8 +1,11 @@
-$blue: #3282BD;
+$blue: #3282bd;
 $black: #000000;
-$gray: #37383A;
-$gray-light: #EAEAEA;
-$white: #FFFFFF;
+$gray: #37383a;
+$gray-light: #eaeaea;
+$white: #ffffff;
 
 $font-primary: "Quicksand", sans-serif;
 $font-secondary: "Open Sans", sans-serif;
+
+$font-14px: 0.875rem;
+$font-16px: 1rem;
