--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -10,11 +10,23 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      gap: 0.5rem;
+      // gap: 0.5rem;
     }
 
     .icon-container {
-      width: 1rem;
+      padding: 0 0.5rem;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:nth-child(1) {
+        border-right: 1px solid $white;
+      }
+
+      img {
+        height: 1rem;
+      }
     }
   }
 
@@ -34,5 +46,19 @@
     width: 100%;
 
     justify-content: space-evenly;
+  }
+
+  .nav-link {
+    font-weight: 400;
+
+    text-transform: uppercase;
+
+    border-bottom: 2px solid transparent;
+
+    &:hover {
+      color: $blue !important;
+
+      border-bottom: 2px solid $blue;
+    }
   }
 }
