--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,3 +26,4 @@
 @import "./modules/porque-elegirnos.scss";
 @import "./modules/trabajar-en-alertas.scss";
 @import "./modules/footer.scss";
+@import "./modules/contacto.scss";
