--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,3 +27,4 @@
 @import "./modules/trabajar-en-alertas.scss";
 @import "./modules/footer.scss";
 @import "./modules/contacto.scss";
+@import "./modules/form.scss";
