--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11408,10 +11408,11 @@ p {
 .hero {
   position: relative;
   width: 100vw;
+  margin-top: 9rem;
 }
 .hero img {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 9rem);
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -11652,21 +11653,22 @@ footer p {
 .contacto strong {
   font-weight: 700;
 }
-.contacto form {
+
+form {
   width: 90%;
   box-shadow: 0px 2px 18px rgba(0, 0, 0, 0.4);
   border-radius: 1rem;
   padding: 2rem;
-  margin: 4rem auto 2rem auto;
+  margin: 4rem auto 2rem auto !important;
 }
-.contacto form .form-label {
+form .form-label {
   font-weight: 700;
 }
-.contacto form .form-label .required {
+form .form-label .required {
   color: red;
 }
-.contacto form .form-control,
-.contacto form .form-select {
+form .form-control,
+form .form-select {
   background-color: rgba(55, 56, 58, 0.1);
   border: none;
 }
