--- a/src/scss/modules/contacto.scss
+++ b/src/scss/modules/contacto.scss
@@ -9,29 +9,29 @@
     font-weight: 700;
   }
 
-  form {
-    width: 90%;
+  // form {
+  //   width: 90%;
 
-    box-shadow: 0px 2px 18px rgba($black, 0.4);
+  //   box-shadow: 0px 2px 18px rgba($black, 0.4);
 
-    border-radius: 1rem;
+  //   border-radius: 1rem;
 
-    padding: 2rem;
-    margin: 4rem auto 2rem auto;
+  //   padding: 2rem;
+  //   margin: 4rem auto 2rem auto;
 
-    .form-label {
-      font-weight: 700;
+  //   .form-label {
+  //     font-weight: 700;
 
-      .required {
-        color: red;
-      }
-    }
+  //     .required {
+  //       color: red;
+  //     }
+  //   }
 
-    .form-control,
-    .form-select {
-      background-color: rgba($gray, 0.1);
+  //   .form-control,
+  //   .form-select {
+  //     background-color: rgba($gray, 0.1);
 
-      border: none;
-    }
-  }
+  //     border: none;
+  //   }
+  // }
 }
