--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "./modules/text-image.scss";
 @import "./modules/porque-elegirnos.scss";
 @import "./modules/trabajar-en-alertas.scss";
-@import "./modules/footer.scss";
-@import "./modules/contacto.scss";
 @import "./modules/form.scss";
+@import "./modules/contacto.scss";
+@import "./modules/nosotros.scss";
+@import "./modules/footer.scss";
