--- a/src/views/modules/text-image.twig
+++ b/src/views/modules/text-image.twig
@@ -1,4 +1,4 @@
-{% macro textImage(content) %}
+{% macro textImage(content, hasBackground) %}
   <section class="text-image container">
     <div class="row">
       <div class="col-md-6">
@@ -21,7 +21,7 @@
   </section>
 {% endmacro %}
 
-{% macro imageText(content) %}
+{% macro imageText(content, hasBackground) %}
   <section class="image-text container">
     <div class="row">
       <div class="col-md-6">
