--- a/src/scss/modules/mixins.scss
+++ b/src/scss/modules/mixins.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   padding: 0.8rem 2rem;
 
-  text-transform: capitalize;
+  text-transform: uppercase;
   text-decoration: none;
 
   border: none;
