--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,4 +28,5 @@
 @import "./modules/form.scss";
 @import "./modules/contacto.scss";
 @import "./modules/nosotros.scss";
+@import "./modules/servicios.scss";
 @import "./modules/footer.scss";
