--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -21,7 +21,7 @@
               <img src="/images/icon-safe.svg" alt="">
             </div>
 
-            <p>Porque brindamos soluciones integrales de seguridad.</p>
+            <p>Porque brindamos soluciones integrales en seguridad.</p>
           </div>
         </div>
         <div class="col-lg-4">
