add nuestros-servicios-de-seguridad-privada component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,4 +29,5 @@
 @import "./modules/contacto.scss";
 @import "./modules/nosotros.scss";
 @import "./modules/servicios.scss";
+@import "./modules/card-nuestros-servicios.scss";
 @import "./modules/footer.scss";
