--- a/src/views/servicios.twig
+++ b/src/views/servicios.twig
@@ -17,5 +17,7 @@
     </div>
   </section>
 
+  {% include "./modules/nuestro-servicios-de-seguridad-privada.twig" %}
+
   {% include "./modules/footer.twig" %}
 {% endblock %}
