--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11687,6 +11687,34 @@ form .form-select {
   color: #ffffff;
 }
 
+.nuestros-servicios-seguridad-privada h2::after, .nuestros-servicios-seguridad-privada .h2::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 25%;
+  margin: 1rem 0;
+  background-color: #216b9f;
+}
+.nuestros-servicios-seguridad-privada h3, .nuestros-servicios-seguridad-privada .h3 {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 2rem 0;
+}
+.nuestros-servicios-seguridad-privada .paragraph {
+  margin-bottom: 1rem;
+}
+.nuestros-servicios-seguridad-privada .card-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 4rem;
+}
+@media (min-width: 768px) {
+  .nuestros-servicios-seguridad-privada .card-container {
+    flex-direction: row;
+  }
+}
+
 .estamos-para-ayudarte {
   background: url("/images/background-blue.png");
 }
@@ -11719,6 +11747,38 @@ form .form-select {
   .estamos-para-ayudarte p {
     width: 50%;
   }
+}
+
+.card-nuestros-servicios {
+  border-radius: 1rem;
+  box-shadow: 0px 2px 18px rgba(0, 0, 0, 0.4);
+  flex: 1 1 33%;
+  overflow: hidden;
+}
+.card-nuestros-servicios.seguridad-fisica .title-wrapper, .card-nuestros-servicios.seguridad-electronica .title-wrapper, .card-nuestros-servicios.adicionales-electronica .title-wrapper {
+  padding: 1rem;
+}
+.card-nuestros-servicios.seguridad-fisica .title-wrapper p, .card-nuestros-servicios.seguridad-electronica .title-wrapper p, .card-nuestros-servicios.adicionales-electronica .title-wrapper p {
+  text-align: center;
+  color: #ffffff;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+.card-nuestros-servicios.seguridad-fisica .title-wrapper, .card-nuestros-servicios.seguridad-electronica .title-wrapper {
+  background-color: #216b9f;
+}
+.card-nuestros-servicios.adicionales-electronica .title-wrapper {
+  background-color: #34427a;
+}
+.card-nuestros-servicios .content-wrapper {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.card-nuestros-servicios .content-wrapper h4, .card-nuestros-servicios .content-wrapper .h4 {
+  text-align: center;
 }
 
 footer {
