--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11708,6 +11708,7 @@ form .form-select {
   flex-direction: column;
   gap: 2rem;
   margin-top: 4rem;
+  padding: 0 2rem;
 }
 @media (min-width: 768px) {
   .nuestros-servicios-seguridad-privada .card-container {
