--- a/src/scss/modules/servicios.scss
+++ b/src/scss/modules/servicios.scss
@@ -29,6 +29,8 @@
 
         margin-top: 4rem;
 
+        padding: 0 2rem;
+
         @include media-breakpoint-up(md) {
             flex-direction: row;
         }
